# backend-rust-ecommerce

./: Cargo.toml
src/: app.rs  error.rs  main.rs
src/auth/: auth_utils.rs  mod.rs
src/constants/: collection_name.rs  mod.rs
src/controllers/: access.rs
src/db/: init_mongodb.rs
src/helpers/: check_db_connection.rs  mod.rs
src/models/: key_token.rs  mod.rs  shop.rs
src/postman/: access.post.http
src/routes/: mod.rs
src/routes/access/: mod.rs
src/services/: access.rs  key_token.rs  mod.rs
src/utils/: jwt.rs
